Correct list bullet overflow
Added padding to the ul so that the bullets aren't half-hidden behind the container. Not the most eloquent and would like feedback if there's better.

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -2624,6 +2624,7 @@ br.big {
     overflow:hidden;
     -webkit-transition:height 400ms ease-out;
     transition:height 400ms ease-out;
+    padding-left:24px;
 }
 .devprojectlist li:nth-child(1n+4){
     display:none;
